Graphite-zero: avoid hard coded icons and various menu spacing changes

--- a/Graphite-Zero/files/Graphite-Zero/cinnamon/cinnamon.css
+++ b/Graphite-Zero/files/Graphite-Zero/cinnamon/cinnamon.css
@@ -134,7 +134,7 @@ StScrollBar StButton#vhandle:hover {
     box-shadow: inset 2px 0px 0px 0px rgba(217,217,217,0.9);
 }
 .popup-menu {
-    font-size: 1.2em;
+    font-size: 1.1em;
     border-radius: 32px 32px 32px 32px;
     background-gradient-start: rgba(120,120,120,1);
     background-gradient-end: rgba(20,20,20,1);
@@ -144,7 +144,7 @@ StScrollBar StButton#vhandle:hover {
     color: #ffffff;
 }
 .menu {
-    font-size: 1.2em;
+    font-size: 1.1em;
     border-radius: 32px 32px 32px 32px;
     background-gradient-start: rgba(120,120,120,1);
     background-gradient-end: rgba(20,20,20,1);
@@ -155,7 +155,7 @@ StScrollBar StButton#vhandle:hover {
     color: #ffffff;
 }
 .popup-menu-arrow {
-    icon-size: 1.14em;
+    icon-size: 1.1em;
 }
 .popup-submenu-menu-item:open {
     background-gradient-start: rgba(20,20,20,1);
@@ -263,7 +263,7 @@ StScrollBar StButton#vhandle:hover {
     font-weight: normal;
 }
 .popup-menu-icon {
-    icon-size: 1.14em;
+    icon-size: 1em;
 }
 /* Switches (to be used in menus) */
 .toggle-switch {
@@ -815,7 +815,7 @@ color: #fb5858;
     padding: 4px;
 }
 .notification-icon-button > StIcon {
-    icon-size: 36px;
+    icon-size: 1.5em;
 }
 #notification StEntry {
     padding: 4px;
@@ -1006,7 +1006,7 @@ color: #fb5858;
 
 /* CinnamonMountOperation Dialogs */
 .cinnamon-mount-operation-icon {
-    icon-size: 48px;
+    icon-size: 2em;
 }
 .mount-password-reask {
     color: red;
@@ -1191,19 +1191,19 @@ color: #fb5858;
     padding-bottom: 4px;
 }
 .menu-applications-box {
-    padding-top: 29px;
+    padding-top: 4px;
     padding-left: 4px;
     padding-right: 4px;
     padding-bottom: 4px;
 }
 .menu-applications-inner-box {
-    padding-top: 10px;
+    padding-top: 4px;
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 0px;
 }
 .menu-applications-outer-box {
-    padding-top: 10px;
+    padding-top: 0px;
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 0px;
@@ -1215,6 +1215,8 @@ color: #fb5858;
     padding-bottom: 3px;
     border: 1px solid rgba(0,0,0,0);
     border-radius: 7px 7px 7px 7px;
+    min-width: 16em; /* unfortunately this does not appear to scale with the font, but this avoids most ellipsising
+    with fonts that are scaled up by a modest factor */
 }
 .menu-application-button:highlighted {
     /* This style is used in menu application buttons for applications which were newly installed */
@@ -1315,10 +1317,10 @@ color: #fb5858;
     max-width: 150px;
 }
 .menu-search-box {
-   padding-top: 3px;
+   padding-top: 0px;
     padding-left: 4px;
     padding-right: 15px;
-    padding-bottom: 9px;
+    padding-bottom: 6px;
 }
 
 #menu-search-entry {
@@ -1333,7 +1335,7 @@ color: #fb5858;
     selected-color: black;
     caret-color: #D9D9D9;
     caret-size: 1px;
-    width: 435px;
+    width: 22em;
     transition-duration: 0;
 }
 #menu-search-entry:focus,
@@ -1366,7 +1368,7 @@ color: #fb5858;
     border: 1px;
     border-gradient-end: rgba(120,120,120,1);
     border-gradient-start: rgba(20,20,20,1);
-        border-radius: 14px 14px 14px 14px;
+        border-radius: 0px 0px 0px 0px;
     background-gradient-end: rgba(20,20,20,1);
     background-gradient-start: rgba(120,120,120,1);
     background-gradient-direction: horizontal;
@@ -1672,7 +1674,7 @@ color: #fb5858;
 }
 
 .sound-player-overlay StButton > StIcon {
-    icon-size: 16px;
+    icon-size: 1em;
 }
 
 .sound-player-overlay StBoxLayout {
